--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -139,3 +139,56 @@ background-color: #dddddd;
 
 
 </body>
+
+<body>
+    <center>
+<!--div for pug dog breed (Alex)-->
+<div class="Pug">
+<!--header to name dog breed (Alex)-->    
+    <h2>Pug</h2>
+<!--img of pug (Alex)-->    
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Mops_oct09_cropped2.jpg" alt="pug" title="Pug" width="50%">
+<!--paragraph description of pug (Alex)-->   
+    <p>Pugs are <span>charming, loving, and mischievous</span> dogs that live to love and to be loved. 
+        They weigh 14 to 18 pounds and come in the colors of fawn and black. </p> 
+    </center>
+<!--list of traits, source:https://www.akc.org/dog-breeds/pug/ (Alex)-->
+    <ol>
+        <li><strong>Family life</strong></li>
+        <ul>
+            <li><em>Good with children</em></li>
+            <li><em>Affectionate with family</em></li>
+            <li><em>Alright with other dogs</em></li>
+        </ul>
+        <li><strong>Physical</strong></li>
+        <ul>
+            <li><em>Shedding level somewhat high</em></li>
+            <li><em>Low drooling level</em></li>
+            <li><em>Coat grooming moderate</em></li>
+        </ul>
+        <li><strong>Social</strong></li>
+        <ul>
+            <li><em>Open to strangers</em></li>
+            <li><em>Very playful</em></li>
+            <li><em>Somewhat protective</em></li>
+        </ul>
+    </ol>
+    <center>
+    <!--table of info on how to care for pugs (Alex)-->
+    <h2>Pug Care</h2>
+    <table>
+        <tr>
+          <th>Health</th>
+          <th>Grooming</th>
+          <th>Exercise</th>
+        </tr>
+        <tr>
+          <td>Sensitive corneal ulcers (dry eyes), breathing problems in humid weather</td>
+          <td>Weekly brushing with a medium bristle brush, regular nail trimming</td>
+        <td>Moderate daily exercise, walks and excersise in cold weather</td>
+        </tr>
+      </table>
+    </center>
+</div>
+
+</body>
