Updated Pug Entry

--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -175,19 +175,30 @@ background-color: #dddddd;
     </ol>
     <center>
     <!--table of info on how to care for pugs (Alex)-->
-    <h2>Pug Care</h2>
-    <table>
-        <tr>
-          <th>Health</th>
-          <th>Grooming</th>
-          <th>Exercise</th>
-        </tr>
-        <tr>
-          <td>Sensitive corneal ulcers (dry eyes), breathing problems in humid weather</td>
-          <td>Weekly brushing with a medium bristle brush, regular nail trimming</td>
-        <td>Moderate daily exercise, walks and excersise in cold weather</td>
-        </tr>
-      </table>
+    <h2>Other facts:</h2>
+<table>
+
+<tr>
+    <td><strong>Health</strong></td>
+    <td><strong>Grooming</strong></td>
+    <td><strong>Exercise</strong></td>
+</tr>
+<tr>
+<td> Sensitive corneal ulcers </td>
+<td>regular nail trimming</td>
+<td>Usually enjoys couch time more</td>
+</tr>
+<tr>
+<td>Dry eyes</td>
+<td>Weekly brushing</td>
+<td>Must excersise in cooler weather</td>  
+</tr>
+<tr>
+<td><strong>Trouble breathing in humid weather</strong></td>
+<td>medium bristle brush</td>
+<td>Moderate daily exercise</td>
+</tr>
+</table>
     </center>
 </div>
 
