--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -76,7 +76,7 @@ equal the height. The length of head, neck and legs should be porportionate to t
 
 <strong>Weight</strong>
 <p>The ideal weight for male dogs is around 88-99 pounds and for females the ideal weight is around 71-77 pounds.</p>
-
+<!--Wanted the weight of the dog to be seperate from the other porportions it made it look neater(maham)-->
 
 <strong>Colors</strong>
 <ul>
@@ -111,6 +111,7 @@ background-color: #dddddd;
 <h2>Puppy Feeding Chart</h2>
 <table>
 <tr>
+    <!--The table looked a bit off so I added color(maham)-->
     <th>Age</th>
     <th>Male</th>
     <th>Female</th> 
