--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -175,7 +175,7 @@ background-color: #dddddd;
         </ul>
     </ol>
     <center>
-    <!--table of info on how to care for pugs (Alex)-->
+    <!--table of info on how to care for pugs and a hyperlink on where to find the original information(Alex)-->
     <h2>Other facts:</h2>
 <table>
 
