--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -205,19 +205,14 @@ background-color: #dddddd;
 <a href= https://www.akc.org/dog-breeds/pug/>Original Source of Facts!</a>
 </body>
 
-<<<<<<< HEAD
-=======
-</body>
-
->>>>>>> 7f4ad238da817fbbee7bcc551eb69d9df7485711
 <body>
     <center>
     <!--A divider for the German Shepherd section (Ashton P.)-->
   <div class="German Shepherd">
     <!--Header for the German Shepherd section (Ashton P.)-->
     <h2>German Shepherd</h2>
-    <!--Image of a german shepherd with a new measurement and a title, with alt text in case the image doesn't load (Ashton P.)-->
-    <img src="https://i.natgeofe.com/n/187b3223-0b45-4aa5-ae5c-24793dd2d6cb/01-german-shepherd-coronavirus-bwtkdt_square.jpg" alt="german shepherd" title="German Shepherd" width="50%">
+    <!--Image of a german shepherd with a new measurement and a title, with alt text in case the image doesn't load, also including a source for the information if you click on the image (Ashton P.)-->
+    <a href="https://www.akc.org/dog-breeds/german-shepherd-dog/"><img src="https://i.natgeofe.com/n/187b3223-0b45-4aa5-ae5c-24793dd2d6cb/01-german-shepherd-coronavirus-bwtkdt_square.jpg" alt="german shepherd" title="German Shepherd" width="50%"></a>
     <!--Little description for the German Shepherd breed (Ashton P.)-->
     <p>German Shepherds are <span>Smart, Loyal, and Courageous</span> dogs. They are all purpose workers that will protect the family it belongs to. They can stand as high as 26 inches tall and can come in many different fur colors, the most common being black and tan.</p>
     </center>
@@ -268,7 +263,6 @@ background-color: #dddddd;
         </table>
       </center>
   </body>
-<<<<<<< HEAD
+
   </html>
-=======
->>>>>>> 7f4ad238da817fbbee7bcc551eb69d9df7485711
+
