--- a/test/dogbreeds.html
+++ b/test/dogbreeds.html
@@ -201,7 +201,7 @@ background-color: #dddddd;
 </table>
     </center>
 </div>
-<a href= https://www.akc.org/dog-breeds/pug/>Original Source of Facts!</a> <!--Mark's comments: Attribute values (href=) in html elements (<a>) should have double quotes: href="url"-->
+<a href= "https://www.akc.org/dog-breeds/pug/">Original Source of Facts!</a> <!--Alex's comment: url link fixed-->
 
     
     <!--A divider for the German Shepherd section (Ashton P.)-->
