--- a/individual/index.html
+++ b/individual/index.html
@@ -23,9 +23,9 @@
             <ul class="navbar-nav">
                 
                
-                <li class="nav-ite"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-ite"><a class="nav-link" href="about/index.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#protothumb">Work</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact" id="contactlink">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact/index.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
 
