--- a/individual/about/index.html
+++ b/individual/about/index.html
@@ -27,3 +27,23 @@
                 <li class="nav-item"><a class="nav-link" href="../contact/index.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
+    <!--content-->
+    <div class="about">
+        <img src="../images/57_20220527090452 (1).jfif" alt="me" id="me">
+        <div class="hello fadeOutUp">Nice to meet you ✌️</div>
+        <br><div class="text2 fadeIn">I am an aspiring <span>UX designer</span> passionate
+            about creating designs which can bring people from different backgrounds closer together.</div> <br>
+            <div class="text3 fadeIn">I am passionate about designing graphics and building apps which are inclusive, ethical, and accessible. 
+                I always prioritize ease of use and functionality when brainstorming ideas for my designs.
+                 </div><br><div class="text4 fadeIn">I am experienced with programs such as Adobe Illustrator, Photoshop, Premiere and Figma,
+                     as well as web development languages including HTML and CSS. I have a background in user experience and user research,
+                    team designing, and prototyping using Figma. </div><br> 
+            <div class="text5 fadeIn">During my freetime, I enjoy listening to music, playing games with friends, and drawing!</div>
+            <hr>
+            <div class="icons">
+            <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
+            <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
+            </div>
+            </body>
+        
+        
