--- a/individual/contact/index.html
+++ b/individual/contact/index.html
@@ -29,7 +29,7 @@
     </nav>
 <!--content-->
 <div class="text1 fadeOutUp">Let's talk 🤙</div>
-<div class="text2">Fill out the form below to get in touch</div>
+<div class="text2"><i>Fill out the <span>form</span> below to get in touch.</i></div>
 <!--form-->
     <div class="container">
         <form action="submit/index.html" method="get">
