--- a/individual/contact/submit/index.html
+++ b/individual/contact/submit/index.html
@@ -29,8 +29,8 @@
     </nav>
  <!--content-->
  
- <div class="text1">Thank you for reaching out 💖</div>
- <div class="text2">I will get back to you within 2-4 business days. Meanwhile, feel free to 
+ <div class="text1 fadeOutUp">Thank you for reaching out 💖</div>
+ <div class="text2">I will get back to you within <span>2-4</span> business days. Meanwhile, feel free to 
      check out my social media accounts.
  </div>
  <!--icons-->
