--- a/individual/index.html
+++ b/individual/index.html
@@ -32,7 +32,7 @@
 <div class="home">
     <div class="content">
         <div class="text1 fadeOutUp">Hello, I'm Maya Totonchi 👋</div>
-        <div class="text2 fadeIn">Prospective Interactive Media Design major at the University of
+        <div class="text2 fadeIn">Prospective <span>Interactive Media Design</span> major at the University of
             Washington Bothell. Background in web design, UX/UI, digital illustration, video 
             editing, logo design, photoshop, photography.
         </div>
