--- a/individual/index.html
+++ b/individual/index.html
@@ -24,7 +24,6 @@
                 
                
                 <li class="nav-ite"><a class="nav-link" href="about/index.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#protothumb">Work</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact/index.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
@@ -36,23 +35,49 @@
             Washington Bothell. Background in web design, UX/UI, digital illustration, video 
             editing, logo design, photoshop, photography.
         </div>
+        </div>
+        <img src="images/istockphoto-1157961681-612x612.jpg" class="fade-in" alt="woman" id="woman">
+        </div>
+        <!--thumbnails-->
+        <ul class="column">
+            <div class="grow"><a href="prototype/index.html"><img src="images/protothumb4.jpg" width="100%" alt="example one" id="protothumbp"></a>
+                <div class="protocaption">
+                    Geodata Prototype (2021)
+                </div></div></ul>
+<ul class="column">
+            <div class="grow"><a href=""><img src="images/webthumbp3.jpg" width="100%" alt="example two" id="webthumbp"></a><div class="webcaption">
+                Web Development
+            </div>
+            </div></ul>
+            <ul class="column">
+                <div class="grow"><a href=""><img src="images/digitalthumb2.jpg" width="100%" alt="example one" id="digitalthumbp"></a><div class="digitalcaption">
+                    Digital Illustration
+                </div>
+                </div></ul>
+    <ul class="column">
+                <div class="grow"><a href=""><img src="images/photothumbp2.jpg" width="100%" alt="example two" id="photothumbp"></a><div class="photocaption">
+                    Photography & Photoshop
+                </div>
+                </div></ul>
+                <hr>
+
         <!--credit for scroll down goes to tr13ze-->
-        <a href="#protothumb" class="scroll-down" address="true"></a>
-        <div class="protothumb">
-            <div class="grow"><img src="images/protothumb2.jpg" alt="prototype" id="protothumb"></div>
+ <!--      <a href="#protothumb" class="scroll-down" address="true"></a>--> 
+        <!--<div class="row"><div class="column"><div class="protothumb">
+            <div class="grow"><a href="prototype/index.html"><img src="images/protothumb4.jpg" alt="prototype" id="protothumb"></a></div>
             <div class="protocaption">
                 Geodata Prototype (2021)
             </div>
             <div class="protodescription">Earth-Mars 
                 communication app 🌎 </div>
-        </div>
-        <div class="webthumb">
+        </div></div>-->
+       <!--- <div class="column"><div class="webthumb">
             <div class="grow"><img src="images/webthumbp2.jpg" alt="web development" id="webthumb"></div>
             <div class="webcaption">
                 Web Development
             </div>
             <div class="webdescription"> HTML, CSS, Javascript 💻</div>
-        </div>
+        </div></div></div>
         <div class="digitalthumb">
             <div class="grow"><img src="images/digitalthumb2.jpg" alt="digital illustration" id="digitalthumb"></div>
             <div class="digitalcaption">
@@ -61,17 +86,19 @@
             <div class="digitaldescription"> Art, logos, animation 🎨</div>
         </div>
         <div class="photothumb">
-            <div class="grow"><img src="images/photothumbp2.jpg" alt="photography" id="photothumb"></div>
+            <div class="grow"><img src="images/protothumb3.jpg" alt="photography" id="photothumb"></div>
             <div class="photocaption">
                 Photography & Photoshop
             </div>
             <div class="photodescription"> Photo gallery 🌸</div>
         </div>
     </div>
-</div>
+</div>-->
+<div class="white">.</div>
 <hr>
 <div class="icons">
 <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
 <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
 </div>
 </body>
+</html>
