--- a/individual/about/index.html
+++ b/individual/about/index.html
@@ -23,7 +23,6 @@
                 
                
                 <li class="nav-ite"><a class="nav-link" href="#about" id="aboutlink">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../index.html#protothumb">Work</a></li>
                 <li class="nav-item"><a class="nav-link" href="../contact/index.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
@@ -40,6 +39,7 @@
                     team designing, and prototyping using Figma. </div><br> 
             <div class="text5 fadeIn">During my freetime, I enjoy listening to music, playing games with friends, and drawing!</div>
             <hr>
+            <!--icons for socials-->
             <div class="icons">
             <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
             <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
