--- a/individual/contact/submit/index.html
+++ b/individual/contact/submit/index.html
@@ -29,8 +29,8 @@
  <!--content-->
  
  <div class="text1 fadeOutUp">Thank you for reaching out 💖</div>
- <div class="text2">I will get back to you within <span>1-3</span> business days. Meanwhile, feel free to 
-     check out my social media accounts.
+ <div class="text2">I will get back to you within <span>1-3</span> business days. You can also reach me through
+    my socials below.
  </div>
  <!--icons-->
  <div class="icons">
