--- a/individual/about/index.html
+++ b/individual/about/index.html
@@ -30,8 +30,9 @@
     <div class="about">
         <img src="../images/57_20220527090452 (1).jfif" alt="me" id="me">
         <div class="hello fadeOutUp">Nice to meet you ✌️</div>
-        <br><div class="text2 fadeIn">I am an aspiring <span>UX designer</span> passionate
-            about creating designs which can bring people from different backgrounds closer together.</div> <br>
+        <br><div class="text2 fadeIn">I am a prospective <span>Interactive Media Design</span> major at the University of
+        Washington Bothell. My skills include web design, UX/UI, digital illustration, video 
+        editing, logo design, photoshop, and photography. </div><br>
             <div class="text3 fadeIn">I am passionate about designing graphics and building apps which are inclusive, ethical, and accessible. 
                 I always prioritize ease of use and functionality when brainstorming ideas for my designs.
                  </div><br><div class="text4 fadeIn">I am experienced with programs such as Adobe Illustrator, Photoshop, Premiere and Figma,
