--- a/individual/contact/index.html
+++ b/individual/contact/index.html
@@ -50,6 +50,7 @@
         </form>
       </div>
       <hr>
+<!--icons for social media-->
 <div class="icons">
 <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
 <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
