--- a/individual/index.html
+++ b/individual/index.html
@@ -27,16 +27,15 @@
                 <li class="nav-item"><a class="nav-link" href="contact/index.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
-
+<!--home section with intro-->
 <div class="home">
     <div class="content">
         <div class="text1 fadeOutUp">Hello, I'm Maya Totonchi 👋</div>
-        <div class="text2 fadeIn">Prospective <span>Interactive Media Design</span> major at the University of
-            Washington Bothell. Background in web design, UX/UI, digital illustration, video 
-            editing, logo design, photoshop, photography.
+        <div class="text2 fadeIn">I am an aspiring <span>UX designer</span> passionate
+            about creating designs which can bring people from different backgrounds closer together.
         </div>
         </div>
-        <img src="images/istockphoto-1157961681-612x612.jpg" class="fade-in" alt="woman" id="woman">
+        <!--<img src="images/istockphoto-1157961681-612x612.jpg" class="fade-in" alt="woman" id="woman">-->
         </div>
         <!--thumbnails-->
         <ul class="column">
@@ -45,17 +44,17 @@
                     Geodata Prototype (2021)
                 </div></div></ul>
 <ul class="column">
-            <div class="grow"><a href=""><img src="images/webthumbp3.jpg" width="100%" alt="example two" id="webthumbp"></a><div class="webcaption">
+            <div class="grow"><a href="web/index.html"><img src="images/webthum.jpg" width="100%" alt="example two" id="webthumbp"></a><div class="webcaption">
                 Web Development
             </div>
             </div></ul>
             <ul class="column">
-                <div class="grow"><a href=""><img src="images/digitalthumb2.jpg" width="100%" alt="example one" id="digitalthumbp"></a><div class="digitalcaption">
+                <div class="grow"><a href="digital/index.html"><img src="images/digitalthum4.jpg" width="100%" alt="example one" id="digitalthumbp"></a><div class="digitalcaption">
                     Digital Illustration
                 </div>
                 </div></ul>
     <ul class="column">
-                <div class="grow"><a href=""><img src="images/photothumbp2.jpg" width="100%" alt="example two" id="photothumbp"></a><div class="photocaption">
+                <div class="grow"><a href="photo/index.html"><img src="images/photothum5.jpg" width="100%" alt="example two" id="photothumbp"></a><div class="photocaption">
                     Photography & Photoshop
                 </div>
                 </div></ul>
@@ -96,6 +95,7 @@
 </div>-->
 <div class="white">.</div>
 <hr>
+<!--icons linking to social media-->
 <div class="icons">
 <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
 <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
