--- a/individual/prototype/index.html
+++ b/individual/prototype/index.html
@@ -35,3 +35,62 @@
 <hr>
     </div>
 </div>
+<!--content start-->
+<div class="content">
+    <h2 class="heading">Project Context</h2>
+    <p class="description">I had the opportunity to work with Christian Perez, Salwa Tecleab, and Dee Yeshitla in an
+        Interactive Media Design course. We were challenged to create a design which would improve
+        Earth-Mars communication. The design process concluded
+        with a demo of a high fidelity prototype for our application.
+    </p>
+    <h2 class="heading">Design Question</h2>
+    <p class="description">We decided to design an application which analyzes rock samples on Mars and sends the data
+        to Earth. </p>
+        <p class="bracket">┌</p> 
+        <p class="question">"What kind of interface would support our user's tasks?"</p>
+        <p class="bracket" id="right">┘</p>
+        <p class="description">Our first step was to identify our user's tasks and goals.
+        To do this, we did research on previous Mars missions, the daily activities of the astronauts,
+        and the existing situational/environmental limitations. </p>
+    <h2 class="heading">Proto-personas</h2>
+    <p class="description">To better understand our users, we identified our primary and secondary
+        users and created proto-personas for each individual. Our first user is Sandy,
+        a geologist sent to Mars on a mission to collect and send geographic data. Our second user
+        is George (mission control) and he will be on the receiving end of the data.</p>
+    </div>
+    <div class="background">
+    <div class="images">
+        <img src="../images/person1.png" class="column" id="person1">
+        <img src="../images/person2.png" class="column" id="person2">
+    </div>   </div>
+    <div class="content">
+    <p class="description"> Based on our previous research, 
+        we came up with qualifications and traits for each individual. Using this information, we 
+        noted the needs and goals of our users in order to come up with user task flows.   
+    </p> 
+    <h2 class="heading">User Task Flows</h2>
+    <p class="description">We created flow charts for our user tasks by breaking down the steps that
+        they would go through when using our application. The flow chart starts with the opening
+        of the app, then prompts the user the mark the location where the rock sample was found. After
+        confirming, the device will analyze the sample and allow the user to save the data when done.
+        Finally, the user can close the app to finish the process.</p>
+        <img src="../images/wiree1.png" id="wire">
+    <h2 class="heading">Wireframing</h2>
+    <p class="description">Using our user task flow as a base, we sketched out wireframes 
+        for the application as the user navigates through the steps. Prompts 
+        such as "save location" will pop up when the app is activated, will a simple yes or no option.
+         After each step, messages will be displayed to ensure the user
+        that their task has successfully been completed, such as "location saved" or "file saved." 
+    </p>
+        
+        <img src="../images/wireframe2.png" id="wireframe">
+        <p class="description">We kept in mind ease of use and clarity for each of the 
+            frames, removing uneccessary buttons and menus that could cause confusion. We also made sure
+            to include important components such as back buttons for each screen so that the user can
+            navigate back and forth between frames.
+        </p>
+        <h2 class="heading">Usability Tests</h2>
+        <p class="description">We used the <a href="https://marvelapp.com/">Marvel App</a> to conduct a usability test of our low
+        fidelity prototype. To do this, we assigned moderator and note taker roles between the members
+    of our group, swapping roles for each test. </p> 
+</div>
