--- a/individual/prototype/index.html
+++ b/individual/prototype/index.html
@@ -78,7 +78,7 @@
     <h2 class="heading">Wireframing</h2>
     <p class="description">Using our user task flow as a base, we sketched out wireframes 
         for the application as the user navigates through the steps. Prompts 
-        such as "save location" will pop up when the app is activated, will a simple yes or no option.
+        such as "save location" will pop up when the app is activated, with a simple yes or no option.
          After each step, messages will be displayed to ensure the user
         that their task has successfully been completed, such as "location saved" or "file saved." 
     </p>
@@ -90,7 +90,67 @@
             navigate back and forth between frames.
         </p>
         <h2 class="heading">Usability Tests</h2>
-        <p class="description">We used the <a href="https://marvelapp.com/">Marvel App</a> to conduct a usability test of our low
+        <p class="description">We used the <a href="https://marvelapp.com/" id="marvel">Marvel App</a> to conduct a usability test for our low
         fidelity prototype. To do this, we assigned moderator and note taker roles between the members
-    of our group, swapping roles for each test. </p> 
+    of our group, swapping roles for each test. We conducted a total of three rounds of testing, having students
+from other groups as our testers. For each round, we took note of the participant's name, age, and pronouns. We
+had each of them complete three simple tasks using our prototype while asking them to think aloud as they
+navigated the app. We took note of how easily they were able to complete the task, as well as whether there was 
+any confusion. At the end of the testing, we asked each participant for their thoughts on the app and their feedback
+on things that could be improved or changed. </p> 
 </div>
+<img src="../images/tests.png" id="tests">
+<div class="content">
+    <p class="description">Based on the user's feedback, our team discussed the changes we could make to 
+        improve our design. One change we made was to add the "mark location" option at the end of the process
+        rather than at the start, as it makes more sense to do so. Another change we made was removing
+        the return button on the "scan results" page since there already existed a "continue" button.
+    </p>
+    <h2 class="heading">Prototype</h2>
+    <p class="description">After making final changes, we created a high-fidelity prototype of the application.
+        Figma was used to create the frames. 
+    </p>
+    </div>
+    <div class="back">
+        <div class="frames">
+            <img src="../images/frame1.jfif" class="" id="frame1">
+            <img src="../images/frame2.jfif" class="" id="frame2">
+            <img src="../images/frame3.jfif" class="" id="frame3">
+            <img src="../images/frame4.jfif" class="" id="frame4">
+   
+            <img src="../images/frame5.jfif" class="" id="frame5">
+            <img src="../images/frame6.jfif" class="" id="frame6">
+            <img src="../images/frame7.jfif" class="" id="frame7">
+        </div>
+        </div>
+    <div class="content">
+        <p class="description">
+            When the user selects "begin," the camera will be displayed,
+            informing the user to center the rock sample in the camera's view. Hitting "continue" will begin
+            the scanning process, and once it is complete, the "results" page will show the user the details
+            of their scan. Next, they will be asked the confirm their current location using the interactive map. 
+            Finally, they will be prompted whether they would like to send the data to Earth. Hitting "yes" will
+            send the user to the final frame, letting them know that the data transmission was successful. Hitting "no"
+            will return the user back to the starting page. 
+        </p>
+        <h2 class="heading">Reflection</h2>
+        <p class="description">The design process allowed me to get a glimpse of what a professional UX designer's
+        job looks like. I got the opportunity to collaborate with a team and work together to create
+        one final product. It was interesting seeing how our design changed as we went through each step in the process. 
+        <br>
+        <br>
+        Another important concept I learned was the ethics of design and the importance of making sure
+        designs are inclusive, honest, and environmentally friendly. One of the things I kept in mind when
+        creating our prototype was making sure that the interface is color blind friendly and that the text
+        is large enough to read. Moving forward, I will continue to prioritize inclusiveness so that my
+        designs may be accessible to everyone. 
+        </p>
+    </div>
+    <hr>
+    <!--icons linking to social media-->
+<div class="icons">
+    <a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
+    <a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
+    </div>
+</body>
+</html>
