--- a/individual/photo/index.html
+++ b/individual/photo/index.html
@@ -19,7 +19,7 @@
 <div class="home">
     <nav class="navbar navbar-expand-sm">
         <div class="max-width">
-            <a class="navbar-brand" href="../index.html"><img src="../images/logoyell.jpg" id="logoimage" width="5%"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logopink.jpg" id="logoimage" width="5%"></a>
             </div>
             <ul class="navbar-nav">
                 
