--- a/individual/contact/submit/submit.html
+++ b/individual/contact/submit/submit.html
@@ -22,8 +22,8 @@
             <ul class="navbar-nav">
                 
                
-                <li class="nav-ite"><a class="nav-link" href="../../about/index.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../index.html" id="contactlink">Contact</a></li>
+                <li class="nav-ite"><a class="nav-link" href="../../about/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="../contact.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
  <!--content-->
