--- a/individual/contact/contact.html
+++ b/individual/contact/contact.html
@@ -23,7 +23,7 @@
                 
                
                 <li class="nav-ite"><a class="nav-link" href="../about/about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact" id="contactlink">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
 <!--content-->
