--- a/individual/submit/submit.html
+++ b/individual/submit/submit.html
@@ -17,13 +17,13 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-sm">
         <div class="max-width">
-            <a class="navbar-brand" href="../../index.html"><img src="../../images/logo5.jpg" id="logoimage" width="5%"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logo5.jpg" id="logoimage" width="5%"></a>
             </div>
             <ul class="navbar-nav">
                 
                
-                <li class="nav-ite"><a class="nav-link" href="../../about/about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../contact.html" id="contactlink">Contact</a></li>
+                <li class="nav-ite"><a class="nav-link" href="../about/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="../contact/contact.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
  <!--content-->
