--- a/individual/about/about.html
+++ b/individual/about/about.html
@@ -23,7 +23,7 @@
                 
                
                 <li class="nav-ite"><a class="nav-link" href="#about" id="aboutlink">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../contact/index.html" id="contactlink">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="../contact/contact.html" id="contactlink">Contact</a></li>
             </ul>
     </nav>
     <!--content-->
