fixed contact link

--- a/individual/contact/contact.html
+++ b/individual/contact/contact.html
@@ -31,7 +31,7 @@
 <div class="text2"><i>Fill out the <span>form</span> below to get in touch.</i></div>
 <!--form-->
     <div class="container">
-        <form action="submit/submit.html" method="get">
+        <form action="../submit/submit.html" method="get">
       
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder=>
