--- a/individual/prototype/prototype.html
+++ b/individual/prototype/prototype.html
@@ -133,6 +133,9 @@ on things that could be improved or changed. </p>
             send the user to the final frame, letting them know that the data transmission was successful. Hitting "no"
             will return the user back to the starting page. 
         </p>
+        </div>
+        <div class="blue">
+        <div class="content" id="white">
         <h2 class="heading">Reflection</h2>
         <p class="description">The design process allowed me to get a glimpse of what a professional UX designer's
         job looks like. I got the opportunity to collaborate with a team and work together to create
@@ -145,6 +148,7 @@ on things that could be improved or changed. </p>
         is large enough to read. Moving forward, I will continue to prioritize inclusiveness so that my
         designs may be accessible to everyone. 
         </p>
+    </div>
     </div>
     <hr>
     <!--icons linking to social media-->
