--- a/individual/web/web.html
+++ b/individual/web/web.html
@@ -36,3 +36,110 @@
 
     </div>
 </div>
+<!--content start-->
+<div class="content">
+    <h2 class="heading">My Projects</h2>
+    <p class="description">I have basic HTML, CSS, and Javascript knowledge from taking college web design courses.
+        Here, you will see some of my past class work as well as some personal projects that I have done. 
+    </p>
+    <h2 class="heading">One of My First Javascript Projects...</h2>
+    <p class="description">One of the first things I learned how to do with Javascript was creating a
+        web page that prompts the
+        user. When "prompt me" is clicked, a pop up will ask the user in input a username and password.
+        The page will then display the username and password that was entered. If nothing was entered,
+        the page will return "null."
+    </p>
+    <figure><img src="../images/java1.png" class="java"><figcaption>User is prompted
+        to enter a username.
+    </figcaption></figure>
+    <figure><img src="../images/java2.png" class="java"><figcaption>The previously entered username 
+        and password is displayed.
+    </figcaption></figure>
+    <p class="description">I later learned how to do more complicated things, such as making a score keeper.
+        This score keeper will increase the counter for the player that is selected. The counter keeps score
+        up to 5 points, and when it is reached, the winner will be highlighted green. Hitting reset will clear the
+        scores.  
+    </p>
+    <figure><img src="../images/score1.png" class="score"><figcaption> The board displays a score of 1 to 3
+        according to what the user selected.
+    </figcaption></figure>
+    <figure><img src="../images/score2.png" class="score"><figcaption> Player two is displayed green after reaching
+        the max score of 5 points.
+    </figcaption></figure>
+    <p class="description">Another type of counter I created was one which changes value based on the time 
+        accumulated. This counter increases by 3 values every 3 seconds that passes.
+    </p>
+    <figure><img src="../images/counter1.png" class="counter"><figcaption> The default value on the counter is 0.
+    </figcaption></figure>
+    <figure><img src="../images/counter2.png" class="counter"><figcaption> After 3 seconds accumulated, the counter
+        displays a value of 3.
+    </figcaption></figure>
+    <figure><img src="../images/counter3.png" class="counter"><figcaption> After 9 seconds accumulated, the counter 
+        displays a value of 3.
+    </figcaption></figure>
+    <h2 class="heading">My Dashboard</h2>
+    <p class="description"> I created a main dashboard that holds all of my lab work for a past class.
+        We were allowed to go all out, so naturally, I had to stylize it according to my preference.
+<br><br> The dashboard is accessed through a log in page where hitting submit will take you to the 
+main site. Checking "remember me" will save your info for the next time you log in.
+</p>
+<figure><img src="../images/dash1.png" class="dash"><figcaption> The log in page requires the user to input
+    username and password.
+</figcaption></figure>
+<p class="description"> The main page contains a navbar which links to their respective websites, and a drop down
+    menu allows one to access to all other labs. The home page is a carousel which 
+    automatically slides over to the next image every 7 seconds. 
+    <figure><img src="../images/dash2.png" class="dash"><figcaption> The dashboard includes a nav bar and
+        an automatic carousel. 
+    </figcaption></figure>
+</p>
+<h2 class="heading">My Portfolio</h2>
+    <p class="description"> This portfolio was one of my personal projects where I showcased all of my
+        design work. This was the first "complicated" web page that I had created compared to everything I had
+        done in the past, so it was a pretty big project for me. <br>
+        The home page of the portfolio has a navbar leading to different parts of the website, and the
+        main text has a typing animation where the lavender text goes through a list of 4 different words.
+</p>
+<figure><img src="../images/port1.png" class="dash"><figcaption> The home page of the portfolio contains a nav
+    bar and animated text.
+</figcaption></figure>
+<p class="description"> Selecting "about" in the navbar scrolls you down to the section on the page
+    where I introduce myself.
+</p>
+<figure><img src="../images/port2.png" class="dash"><figcaption> The about page has a photo and introduction
+    of myself.
+</figcaption></figure>
+<p class="description"> "Skills" takes you to a page which showcases my knowledge on different languages and
+    programs.
+</p>
+<figure><img src="../images/port3.png" class="dash"><figcaption> The skills section shows percentages of my
+    knowledge levels on languages/programs.
+</figcaption></figure>
+<p class="description"> "Work" leads you to thumbnails which link to different web pages showcasing my
+    projects and designs.
+</p>
+<figure><img src="../images/port4.png" class="dash"><figcaption> The work section contains thumbnails 
+    leading to different web pages.
+</figcaption></figure></div>
+<div class="purple">
+<div class="content" id="white">
+<h2 class="heading">My Biggest Project of all... </h2>
+    <p class="description">My biggest web project up to date is...this website! This has been the most challenging
+        yet most enjoyable experience I have had creating a web page. This site is a final project for my web design course,
+        and while we were free to do whatever we'd like, I decided that I wanted to create another portfolio. I wanted
+        to challenge myself to remake my past portfolio to one that is better and improved. I found myself
+        learning new things, like animating, as I created this web page, and it was a very educational experience for me.
+        Another reason behind me making this portfolio was so that I could have something that I could realistically use
+        when applying for jobs and presenting myself in the future. I poured my heart into this project, and I am
+        thankful to all of the people who have helped me come this far. 
+    </p>
+</div>
+</div>
+<hr>
+<!--icons linking to social media-->
+<div class="icons">
+<a href="https://www.linkedin.com/in/maya-totonchi-a4052823a/"><i class="uil uil-linkedin-alt" id="linkedin"></i></a>
+<a href="https://instagram.com/mayatoton?igshid=YmMyMTA2M2Y="><i class="uil uil-instagram" id="instagram"></i></a>
+</div>
+</body>
+</html>
